# reactos

./: configure.cmd
boot/bootdata/: hivecls.inf
dll/directx/wine/amstream/: CMakeLists.txt  amstream_classes.rgs  main.c  version.rc
dll/directx/wine/d3dxof/: parsing.c
dll/directx/wine/dmusic/: dmusic_private.h
dll/directx/wine/qcap/: CMakeLists.txt  qcap_classes_r_res.rgs  qcap_main.c  qcap_private.h  v4l.c  version.rc  vfwcapture.c
dll/directx/wine/qedit/: CMakeLists.txt  main.c  qedit_classes.rgs
dll/directx/wine/quartz/: CMakeLists.txt  control_tlb_r.rgs  control_tlb_t.rgs  filesource.c  filtergraph.c  main.c  quartz.rc  vmr9.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/rtl/: version.c
dll/win32/: CMakeLists.txt
dll/win32/activeds/: CMakeLists.txt  precomp.h
dll/win32/advapi32/: CMakeLists.txt
dll/win32/advapi32/misc/: hwprofiles.c
dll/win32/advapi32/service/: sctrl.c
dll/win32/advapi32/wine/: crypt.c
dll/win32/atl/: CMakeLists.txt
dll/win32/comctl32/: imagelist.c
dll/win32/comdlg32/: CMakeLists.txt  autocomp.cpp
dll/win32/feclient/: CMakeLists.txt  feclient.spec
dll/win32/gdiplus/: CMakeLists.txt  brush.c  gdiplus_private.h  graphics.c  image.c  precomp.h
dll/win32/iphlpapi/: ifenum_reactos.c  iphlpapi_private.h
dll/win32/jscript/: CMakeLists.txt  array.c  arraybuf.c  date.c  dispex.c  engine.c  engine.h  error.c  global.c  jscript.h  json.c  jsstr.c  jsstr.h  jsutils.c  math.c  number.c  object.c  parser.h  precomp.h  regexp.h  resource.h
dll/win32/jscript/lang/: jscript_Da.rc  jscript_De.rc  jscript_En.rc  jscript_Es.rc  jscript_Fr.rc  jscript_He.rc  jscript_Hu.rc  jscript_It.rc  jscript_Ja.rc  jscript_Ko.rc  jscript_Lt.rc  jscript_Nl.rc  jscript_No.rc  jscript_Pl.rc  jscript_Pt.rc  jscript_Ro.rc  jscript_Ru.rc  jscript_Si.rc  jscript_Sq.rc  jscript_Tr.rc  jscript_Uk.rc  jscript_Zh.rc
dll/win32/kernel32/: kernel32.spec
dll/win32/kernel32/kernel32_vista/: CMakeLists.txt  kernel32_vista.spec  threadpool.c
dll/win32/mlang/: CMakeLists.txt
dll/win32/mpr/: CMakeLists.txt  wnet.c
dll/win32/msafd/: msafd.h
dll/win32/msafd/misc/: dllmain.c  sndrcv.c
dll/win32/netutils/: CMakeLists.txt  main.c  netutils.spec
dll/win32/propsys/: CMakeLists.txt  precomp.h  propsys.spec  propsys_main.c  propvar.c
dll/win32/rpcrt4/: CMakeLists.txt  cpsf.c  cstub.c  msvc.S  ndr_stubless.c  ndr_stubless.h  ndr_typelib.c  rpc_assoc.c  rpc_binding.c  rpc_epmap.c  rpc_message.c  rpc_server.c  rpc_transport.c  rpcrt4.spec  rpcrt4_main.c
dll/win32/rsaenh/: CMakeLists.txt  tomcrypt.h
dll/win32/shcore/: CMakeLists.txt  main.c  shcore.spec
dll/win32/uiautomationcore/: CMakeLists.txt  uia_classes.idl  uia_classes_client_t.rgs  uia_classes_core_t.rgs  uia_classes_t.rgs  uia_client.c  uia_com_client.c  uia_event.c  uia_ids.c  uia_main.c  uia_private.h  uia_provider.c  uia_utils.c  uiautomationcore.rc  uiautomationcore.spec
dll/win32/urlmon/: CMakeLists.txt
dll/win32/vcruntime140/: misc.c  vcruntime140.spec
dll/win32/windowscodecs/: CMakeLists.txt  wincodecs_private.h
dll/win32/winhttp/: CMakeLists.txt  cookie.c  main.c  net.c  precomp.h  request.c  session.c  url.c  winhttp_private.h
dll/win32/ws2_32/src/: addrinfo.c
dll/win32/xmllite/: CMakeLists.txt  reader.c  writer.c
drivers/network/afd/afd/: bind.c  connect.c  listen.c  main.c  read.c
drivers/network/afd/include/: afd.h
drivers/network/tcpip/datalink/: lan.c
drivers/network/tcpip/include/: address.h  interface.h  ip.h  ticonsts.h  tilists.h
drivers/network/tcpip/ip/lwip_glue/: lwip_glue.h  tcp.c
drivers/network/tcpip/ip/network/: address.c  arp.c  icmp.c  interface.c  ip.c  loopback.c  neighbor.c  receive.c
drivers/network/tcpip/ip/transport/rawip/: rawip.c
drivers/network/tcpip/ip/transport/tcp/: accept.c  if.c  tcp.c
drivers/network/tcpip/ip/transport/udp/: udp.c
drivers/network/tcpip/lwip/src/include/lwip/: ip6_frag.h  opt.h
drivers/network/tcpip/tcpip/: dispatch.c  fileobjs.c  icmp.c  main.c  ninfo.c
media/doc/: WINESYNC.txt
media/inf/: CMakeLists.txt  netip6.inf  nettcpip.inf  syssetup.inf
modules/rostests/winetests/: CMakeLists.txt
modules/rostests/winetests/comctl32/: imagelist.c  resources.h  static.c
modules/rostests/winetests/gdiplus/: image.c
modules/rostests/winetests/jscript/: CMakeLists.txt  run.c
modules/rostests/winetests/propsys/: propsys.c
modules/rostests/winetests/rpcrt4/: CMakeLists.txt  cstub.c  server.c
modules/rostests/winetests/windowscodecs/: CMakeLists.txt
modules/rostests/winetests/winhttp/: CMakeLists.txt  winhttp.c
modules/rostests/winetests/ws2_32/: sock.c
modules/rostests/winetests/xmllite/: CMakeLists.txt  writer.c
sdk/include/dxsdk/: axextend.idl  uuids.h
sdk/include/psdk/: CMakeLists.txt  basetsd.h  featurestagingapi.h  gdipluseffects.h  gdiplusenums.h  gdiplusflat.h  mmreg.h  propsys.idl  propvarutil.h  rpc.h  rpcdce.h  rpcndr.h  shcore.h  uiautomation.h  uiautomationclient.idl  uiautomationcore.idl  uiautomationcoreapi.h  winerror.h  winhttp.h
sdk/include/reactos/wine/: CMakeLists.txt  debug.h  iaccessible2.idl  strmbase.h
sdk/include/xdk/: winnt_old.h
sdk/lib/: CMakeLists.txt
sdk/tools/winesync/: comctl32.cfg  gdiplus.cfg  jscript.cfg  propsys.cfg  rpcrt4.cfg  winhttp.cfg  xmllite.cfg
subsystems/win/basesrv/: sndsntry.c
win32ss/: CMakeLists.txt
win32ss/dwm/: CMakeLists.txt
win32ss/dwm/presentationdebug/: stubs.c
win32ss/dwm/service/: CMakeLists.txt  port.c  serv.c  uxsms.c  uxsms.h  uxsms.rc  uxsms.spec
win32ss/dwm/shared/: CMakeLists.txt
win32ss/dwm/shared/UtilLib/: Assert.inl  CMakeLists.txt  Instrumentation.cxx  List.inl  MemUtils.cxx  Public.h  UtilMisc.h  pch.h
win32ss/dwm/shared/include/: Always.h  AvalonDebugP.h  wpf-etw.h
win32ss/include/: ntuser.h
win32ss/user/ntuser/: desktop.c
